feat: move db actions into single transaction