@@ -1,17 +1,19 @@
 package org.broadinstitute.consent.http.service.dao;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.Date;
+import java.util.List;
 import java.util.Optional;
 import java.util.Random;
-import org.apache.commons.lang3.RandomStringUtils;
 import org.broadinstitute.consent.http.db.DAOTestHelper;
 import org.broadinstitute.consent.http.db.UserDAO;
 import org.broadinstitute.consent.http.db.UserRoleDAO;
@@ -39,7 +41,7 @@ class UserServiceDAOTest extends DAOTestHelper {
   }
 
   @Test
-  void testTransactionPatternHappyPathInActualService() {
+  void testTransactionPatternHappyPathInActualService() throws Exception {
     User testUser = createUser();
     Institution institution = createInstitution();
     assertTrue(Optional.ofNullable(testUser.getInstitutionId()).isEmpty());
@@ -51,7 +53,7 @@ class UserServiceDAOTest extends DAOTestHelper {
   }
 
   @Test
-  void testTransactionRollbackAfterMultipleInserts() {
+  void testTransactionRollbackAfterMultipleInserts() throws Exception {
     boolean exceptionCaught = false;
     User testUser = createUser();
     Institution institution = createInstitution();
@@ -69,11 +71,11 @@ class UserServiceDAOTest extends DAOTestHelper {
             userRoleDAOT.insertSingleUserRole(userRole.getRoleId(), testUser.getUserId());
             throw new RuntimeException("interrupt the transaction.");
           });
-    } catch (Exception e) {
+    } catch (Exception _) {
       User fetchedUser = userDAO.findUserById(testUser.getUserId());
       assertEquals(fetchedUser.getUserId(), testUser.getUserId());
       assertEquals(1, fetchedUser.getRoles().size());
-      assertEquals(UserRoles.RESEARCHER.getRoleId(), fetchedUser.getRoles().get(0).getRoleId());
+      assertEquals(UserRoles.RESEARCHER.getRoleId(), fetchedUser.getRoles().getFirst().getRoleId());
       assertNotEquals(fetchedUser.getInstitutionId(), institution.getId());
       assertTrue(Optional.ofNullable(fetchedUser.getInstitutionId()).isEmpty());
       exceptionCaught = true;
@@ -83,25 +85,26 @@ class UserServiceDAOTest extends DAOTestHelper {
     assertTrue(exceptionCaught);
   }
 
-  private Institution createInstitution() {
+  private Institution createInstitution() throws Exception {
     User createUser = createUser();
-    Integer id =
-        institutionDAO.insertInstitution(
-            RandomStringUtils.randomAlphabetic(20),
-            "itDirectorName",
-            "itDirectorEmail",
-            RandomStringUtils.randomAlphabetic(10),
-            new Random().nextInt(),
-            RandomStringUtils.randomAlphabetic(10),
-            RandomStringUtils.randomAlphabetic(10),
-            RandomStringUtils.randomAlphabetic(10),
-            OrganizationType.NON_PROFIT.getValue(),
-            createUser.getUserId(),
-            createUser.getCreateDate());
-    Institution institution = institutionDAO.findInstitutionById(id);
+    Institution i = new Institution();
+    i.setName(randomAlphabetic(10));
+    i.setItDirectorName(randomAlphabetic(10));
+    i.setItDirectorName("itDirectorName");
+    i.setItDirectorEmail("itDirectorEmail");
+    i.setInstitutionUrl(randomAlphabetic(10));
+    i.setDunsNumber(new Random().nextInt());
+    i.setOrgChartUrl(randomAlphabetic(10));
+    i.setVerificationUrl(randomAlphabetic(10));
+    i.setVerificationFilename(randomAlphabetic(10));
+    i.setOrganizationType(OrganizationType.NON_PROFIT);
+    i.setCreateUserId(createUser.getUserId());
+    i.setDomains(List.of("test.org"));
+    Institution institution = institutionDAO.insertFullInstitution(i, createUser.getUserId());
+
     User updateUser = createUser();
     institutionDAO.updateInstitutionById(
-        id,
+        institution.getId(),
         institution.getName(),
         institution.getItDirectorEmail(),
         institution.getItDirectorName(),
@@ -113,11 +116,11 @@ class UserServiceDAOTest extends DAOTestHelper {
         institution.getOrganizationType().getValue(),
         updateUser.getUserId(),
         new Date());
-    return institutionDAO.findInstitutionById(id);
+    return institutionDAO.findInstitutionById(institution.getId());
   }
 
   @Test
-  void testUpdateInstitutionAndClearLibraryCardForUser() {
+  void testUpdateInstitutionAndClearLibraryCardForUser() throws Exception {
     User testUser = createUser();
     Institution institution = createInstitution();
 
@@ -130,7 +133,7 @@ class UserServiceDAOTest extends DAOTestHelper {
   }
 
   @Test
-  void testUpdateInstitutionAndClearLibraryCardForUser_ClearInstitution() {
+  void testUpdateInstitutionAndClearLibraryCardForUser_ClearInstitution() throws Exception {
     User testUser = createUser();
     Institution institution = createInstitution();
 
@@ -147,7 +150,8 @@ class UserServiceDAOTest extends DAOTestHelper {
   }
 
   @Test
-  void testUpdateInstitutionAndClearLibraryCardForUser_ClearLibraryCardAndInstitution() {
+  void testUpdateInstitutionAndClearLibraryCardForUser_ClearLibraryCardAndInstitution()
+      throws Exception {
     User testUser = createUser();
     Institution institution = createInstitution();
     userDAO.updateInstitutionId(testUser.getUserId(), institution.getId());
@@ -165,5 +169,78 @@ class UserServiceDAOTest extends DAOTestHelper {
     serviceDAO.updateInstitutionAndClearLibraryCardForUser(testUser.getUserId(), null);
     assertNull(libraryCardDAO.findLibraryCardByUserId(testUser.getUserId()));
     assertNull(institutionDAO.findInstitutionById(testUser.getInstitutionId()));
+  }
+
+  @Test
+  void testCreateUser() throws Exception {
+    Institution i = createInstitution();
+    User u = generateUnsavedUser(i);
+    List<UserRole> roles = List.of(generateRole(UserRoles.RESEARCHER.getRoleId()));
+    u.setRoles(roles);
+    User user = serviceDAO.createUser(u);
+    assertTrue(user.getUserId() > 0);
+    assertEquals(u.getEmail(), user.getEmail());
+    assertEquals(u.getDisplayName(), user.getDisplayName());
+    assertEquals(u.getInstitutionId(), user.getInstitutionId());
+    assertNotNull(user.getCreateDate());
+  }
+
+  @Test
+  void testCreateUserNoInstitution() {
+    User u = generateUnsavedUser(null);
+    List<UserRole> roles = List.of(generateRole(UserRoles.RESEARCHER.getRoleId()));
+    u.setRoles(roles);
+    User user = serviceDAO.createUser(u);
+    assertTrue(user.getUserId() > 0);
+    assertEquals(u.getEmail(), user.getEmail());
+    assertEquals(u.getDisplayName(), user.getDisplayName());
+    assertNull(user.getInstitutionId());
+    assertNotNull(user.getCreateDate());
+  }
+
+  @Test
+  void testCreateUserWithLibraryCard() throws Exception {
+    Institution i = createInstitution();
+    User u = generateUnsavedUser(i);
+    libraryCardDAO.insertLibraryCard(
+        null, u.getDisplayName(), u.getEmail(), i.getCreateUserId(), new Date());
+    List<UserRole> roles = List.of(generateRole(UserRoles.RESEARCHER.getRoleId()));
+    u.setRoles(roles);
+    User user = serviceDAO.createUser(u);
+    assertNotNull(user.getLibraryCard());
+  }
+
+  @Test
+  void testCreateUserNoRoles() throws Exception {
+    Institution i = createInstitution();
+    User u = generateUnsavedUser(i);
+    assertThrows(IllegalArgumentException.class, () -> serviceDAO.createUser(u));
+  }
+
+  private static User generateUnsavedUser(Institution institution) {
+    User u = new User();
+    int i1 = randomInt(10, 50);
+    int i2 = randomInt(10, 50);
+    String email;
+    if (institution != null) {
+      assertNotNull(institution.getDomains());
+      assertFalse(institution.getDomains().isEmpty());
+      email = randomAlphabetic(i1) + "@" + institution.getDomains().getFirst();
+    } else {
+      email = randomAlphabetic(i1) + "@" + randomAlphabetic(i1) + ".org";
+    }
+    String displayName = randomAlphabetic(i1) + " " + randomAlphabetic(i2);
+    u.setEmail(email);
+    u.setEraCommonsId(email);
+    u.setDisplayName(displayName);
+    u.setUserId(randomInt(1, 100));
+    u.setInstitutionId(institution == null ? null : institution.getId());
+    return u;
+  }
+
+  private UserRole generateRole(int roleId) {
+    UserRoles rolesEnum = UserRoles.getUserRoleFromId(roleId);
+    assert rolesEnum != null;
+    return new UserRole(rolesEnum.getRoleId(), rolesEnum.getRoleName());
   }
 }
